- added popover to p2p/stealth mode button to explain the peer mode and privacy issues. - added popover to first-time use case to explain that specific servlets are only visible after customization and/or crawl starts

--- a/htroot/env/bootstrap-base.css
+++ b/htroot/env/bootstrap-base.css
@@ -120,4 +120,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 .tt-suggestion p {
   margin: 0;
 }
+.popover {
+    z-index: 1600;
+}
  
